--- a/css/index.css
+++ b/css/index.css
@@ -373,6 +373,13 @@ html {
   flex-direction: row;
   margin-bottom: 10%;
 }
+@media (max-width: 1024px) {
+  .works .work {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 @media (max-width: 500px) {
   .works .work {
     display: flex;
@@ -391,6 +398,11 @@ html {
   letter-spacing: 2px;
   position: relative;
   margin-bottom: 0.5rem;
+}
+@media (max-width: 1024px) {
+  .works .work h2 {
+    line-height: 30px;
+  }
 }
 @media (max-width: 500px) {
   .works .work h2 {
@@ -426,6 +438,12 @@ html {
   filter: grayscale(100%);
   transition: all 0.3s ease-in-out;
 }
+@media (max-width: 1024px) {
+  .works .work .project-image img {
+    max-width: 1024px;
+    filter: grayscale(0%);
+  }
+}
 @media (max-width: 800px) {
   .works .work .project-image img {
     max-width: 300px;
@@ -445,6 +463,11 @@ html {
   opacity: 0.2;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
+}
+@media (max-width: 1024px) {
+  .works .work #web-logo {
+    display: none;
+  }
 }
 @media (max-width: 500px) {
   .works .work #web-logo {
@@ -471,6 +494,12 @@ html {
   cursor: pointer;
   transition: 0.5s ease;
 }
+@media (max-width: 1024px) {
+  .works .work .main-btn {
+    width: 80%;
+    margin: 30px auto;
+  }
+}
 @media (max-width: 500px) {
   .works .work .main-btn {
     width: 50%;
@@ -484,9 +513,17 @@ html {
   color: #191919;
 }
 .works .artwork {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   justify-content: space-around;
+  justify-items: center;
+  grid-row-gap: 20px;
+}
+@media (max-width: 1024px) {
+  .works .artwork {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 @media (max-width: 500px) {
   .works .artwork {
@@ -499,18 +536,34 @@ html {
   border: 1px solid #414141;
   object-fit: cover;
   width: 100%;
-  max-width: 250px;
-  max-height: 350px;
+  width: 280px;
+  height: 350px;
   padding: 10px;
-  margin: 20px 0px 20px 0px;
   filter: grayscale(100%);
   transition: all 0.3s ease-in-out;
 }
+@media (max-width: 1024px) {
+  .works .artwork img {
+    width: 100%;
+    max-width: 280px;
+    max-height: 350px;
+    filter: grayscale(0%);
+  }
+}
 @media (max-width: 800px) {
   .works .artwork img {
-    max-width: 320px;
-    max-height: 500px;
-    filter: grayscale(0%);
+    width: 100%;
+    max-width: 220px;
+    max-height: 380px;
+    margin: 0px 0px 20px 0px;
+  }
+}
+@media (max-width: 500px) {
+  .works .artwork img {
+    width: 100%;
+    max-width: 290px;
+    max-height: 400px;
+    margin: 0px 0px 20px 0px;
   }
 }
 .works .artwork img:hover {
@@ -532,6 +585,11 @@ html {
   text-align: center;
   cursor: pointer;
   transition: 0.5s ease;
+}
+@media (max-width: 1024px) {
+  .works .main-btn-art {
+    width: 50%;
+  }
 }
 @media (max-width: 500px) {
   .works .main-btn-art {
